2006-02-20  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/subparse/gstsubparse.c: (subrip_unescape_formatting),
	(parse_subrip), (gst_sub_parse_format_autodetect):
	  Set right caps given that we send escaped text. Also,
	  honour <i></i>, <b></b> and <u></u> markers that can be found
	  in .srt files (fixes #310202).

2006-02-20  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/audio/mixerutils.c:
	(element_factory_rank_compare_func):
	  Make order in which elements are tried more determinable.

2006-02-20  Julien MOUTTE  <julien@moutte.net>

	* gst/playback/gstdecodebin.c: (get_our_ghost_pad),
	(remove_element_chain), (cleanup_decodebin),
	(gst_decode_bin_change_state): Make decodebin reusable by
	fixing remove_element_chain first and then introduce a
	cleaner in state change to ->NULL. (Closes #331678)

2006-02-19  Wim Taymans  <wim@fluendo.com>

	* ext/gnomevfs/gstgnomevfssink.c: (gst_gnome_vfs_sink_open_file):
	use 0666 mask when creating files so umask gets applied
	correctly. Fixes #331295.

2006-02-19  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/subparse/Makefile.am:
	* gst/subparse/gstssaparse.c: (gst_ssa_parse_base_init),
	(gst_ssa_parse_dispose), (gst_ssa_parse_init),
	(gst_ssa_parse_class_init), (gst_ssa_parse_src_event),
	(gst_ssa_parse_sink_event), (gst_ssa_parse_setcaps),
	(gst_ssa_parse_remove_override_codes), (gst_ssa_parse_parse_line),
	(gst_ssa_parse_chain), (gst_ssa_parse_change_state):
	* gst/subparse/gstssaparse.h:
	* gst/subparse/gstsubparse.c: (plugin_init):
	  Add very basic parser for SSA subtitle streams (as often
	  found in matroska files).

2006-02-19  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/playback/gstdecodebin.c: (mimetype_is_raw):
	  That should be text/x-pango-markup, not text/x-pango-layout.

2006-02-19  Julien MOUTTE  <julien@moutte.net>

	* ext/pango/gsttextoverlay.c: (gst_text_overlay_finalize):
	Polishing.

2006-02-19  Julien MOUTTE  <julien@moutte.net>
